--- a/package.json
+++ b/package.json
@@ -42,21 +42,21 @@
   },
   "devDependencies": {
     "@alwynou/eslint-config": "^0.25.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "bumpp": "^8.2.1",
     "consola": "^2.15.3",
-    "esbuild": "^0.14.48",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "esbuild": "^0.14.54",
+    "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.26.0",
     "fs-extra": "^10.1.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.75.7",
-    "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-esbuild": "^4.9.1",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.13",
-    "vitest": "^0.17.0"
+    "rollup": "^2.79.1",
+    "rollup-plugin-dts": "^4.2.3",
+    "rollup-plugin-esbuild": "^4.10.3",
+    "typescript": "^4.9.3",
+    "vite": "^2.9.15",
+    "vitest": "^0.17.1"
   }
 }
